Sticky header. Modification for Browse Metadata: Move TOC to RHS and prevent TOC from scrolling off screen (#436).

--- a/src/components/nav/nav.module.css
+++ b/src/components/nav/nav.module.css
@@ -142,7 +142,7 @@
 	.hcaNav {
 		height: 100%;
 		position: sticky;
-		top: 24px;
+		top: 84px;
 		z-index: 1; /* Required for heading anchors */
 	}
 
