--- a/src/components/toc/toc.module.css
+++ b/src/components/toc/toc.module.css
@@ -78,7 +78,7 @@
 		height: 100%;
 		margin-bottom: 88px; /* Prevents TOC extending beyond content end */
 		position: sticky;
-		top: 24px;
+		top: 84px;
 	}
 
 	/* TOCs */
